<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/dialog_layout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_round"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sys"
                android:textColor="#000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/dialog_body_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tinker_content"
                android:textSize="14sp"
                android:textColor="#000" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.01dp"
            android:background="#000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/dialog_yiban_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/reload1"
                android:textColor="#000" />

            <View
                android:layout_width="0.01dp"
                android:layout_height="match_parent"
                android:background="#000" />

            <TextView
                 android:id="@+id/dialog_chiyu_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/reload2"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>