<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20dp"
        android:background="@color/colorAccent"
        app:subtitleTextColor="@color/white"
        app:titleTextColor="@color/white"/>
        <include
            android:id="@+id/top"
            layout="@layout/title" />

    <RelativeLayout
        android:id="@+id/relative_about"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <ImageView
            android:id="@+id/img_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_remove_red_eye_black_24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us"
            android:layout_toRightOf="@+id/img_about"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:textSize="18sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chevron_right_black_24dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>



    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent">

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relative_font"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <ImageView
            android:id="@+id/img_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_font_download_black_24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/font"
            android:layout_toRightOf="@+id/img_font"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:textSize="18sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chevron_right_black_24dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>



    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent">

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relative_update"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="20dp">

        <ImageView
            android:id="@+id/img_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_get_app_black_24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:layout_toRightOf="@+id/img_update"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:textSize="18sp"/>
        <ImageView
            android:id="@+id/update_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv"
            android:layout_marginTop="15dp"
            android:src="@drawable/dian"
            android:layout_marginLeft="3dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent">

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relative_clear"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <ImageView
            android:id="@+id/img_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/clear"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_cache"
            android:layout_toRightOf="@+id/img_clear"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/tv_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text=""/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent">

    </LinearLayout>

    <Button
        android:id="@+id/btn_cancle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/receive_bg"
        android:text="@string/login_out"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="30dp"/>

</LinearLayout>