<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.lanpini.lpn_android.activity.LoginActivity">



    <com.lanpini.lpn_android.MyView.KJScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top"
        android:fillViewport="true"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="25dp">

                <ImageView
                    android:layout_width="@dimen/_100dp"
                    android:layout_height="@dimen/_100dp"
                    android:src="@drawable/logo"
                    android:layout_gravity="center_horizontal"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_gravity="center_horizontal"
                        android:text="藍毗尼佛陀聖地建設慈善基金總會"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:textSize="19dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="Lumbini Buddha Holy Land  Charity Foundation"
                        android:textColor="@color/colorAccent"
                        android:textSize="12dp" />
                </LinearLayout>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/line1"
            android:layout_marginTop="80dp">

            <EditText
                android:layout_width="1px"
                android:layout_height="1px" />

            <LinearLayout
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/phoneline"
                    android:textColorHint="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:textSize="17sp"
                        android:hint="@string/Username"
                        android:textColor="#000"
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:background="@drawable/selector_bg_edit"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:paddingBottom="2dp"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/_20dp">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/passwordline"
                    android:textColorHint="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:textSize="17sp"
                        android:hint="@string/Password"
                        android:textColor="#000"
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:background="@drawable/selector_bg_edit"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:paddingBottom="2dp"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_50dp"
                android:layout_marginLeft="@dimen/_50dp"
                android:layout_marginTop="8dp">
                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_username"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:id="@+id/toRegistered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textColor="@color/colorAccent"
                    android:layout_toRightOf="@+id/tv1"/>
                <TextView
                    android:id="@+id/toForgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password"
                    android:textColor="@color/colorAccent"
                    android:layout_alignParentRight="true"
                    />
            </RelativeLayout>

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginTop="22dp"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:background="@color/red"/>

        </LinearLayout>



        </RelativeLayout>
    </com.lanpini.lpn_android.MyView.KJScrollView>
    <ImageView
        android:id="@+id/back1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/left_back1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="1px"
                android:background="@color/shimmer_background_color"
                android:layout_weight="1"
                android:layout_gravity="center_vertical">

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="其他登录方式"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="1px"
                android:background="@color/shimmer_background_color"
                android:layout_weight="1"
                android:layout_gravity="center_vertical">

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.lanpini.lpn_android.MyView.MoreTextView
                android:id="@+id/wx_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="微信登录"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                app:drawable_src="@drawable/wx_icon"
                app:imageLocation="top"/>

            <com.lanpini.lpn_android.MyView.MoreTextView
                android:id="@+id/qq_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="QQ登录"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                app:drawable_src="@drawable/qq_icon"
                app:imageLocation="top"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
